--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.cloud.compatibility-verifier.enabled=false
 spring.application.name=config-server
 server.port=9101
-spring.cloud.config.server.git.uri=https://github.com/xxxxx/mcommerce
--config-repo.git
-spring.cloud.config.server.git.default-label=master
+spring.cloud.config.server.git.uri=https://github.com/Alimesaouab/config-server.git
+spring.cloud.config.server.git.default-label=main
 #Log level configuration
 logging.level.root=INFO
 logging.level.com.mcommerce.config.server=INFO
