--- a/commande-service.properties
+++ b/commande-service.properties
@@ -1,8 +1,10 @@
-server.port=9000
 #Configurations H2
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 #defini l'encodage pour data.sql
 spring.datasource.sql-script-encoding=UTF8
 #Les configurations exetrenalisés
+
+mes-configs.limitDeCommandes=20
+management.endpoints.web.exposure.include=*
 
